# LogoAnimationUniKoblenz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Cloud.cpp  Cloud.h  Rain.cpp  Rain.h  Snow.cpp  Snow.h  Star.cpp  Star.h  main.cpp  ofApp.cpp  ofApp.h
